# GameAnimation

./: CMakeLists.txt  README.md  Readme.md  conanfile.txt
App/: CMakeLists.txt
App/source/: Main.cpp
Lib/: CMakeLists.txt
Lib/include/anim/: Clip.h  Frame.h  Interpolation.h  Pose.h  Skeleton.h  Track.h  TransformTrack.h
Lib/include/app/: Application.h  GLApplication.h
Lib/include/gfx/: AnimationTexture.h  Attribute.h  Draw.h  DrawMode.h  IndexBuffer.h  Mesh.h  Shader.h  Texture.h  Uniform.h
Lib/include/ik/: CCDSolver.h  FABRIKSolver.h
Lib/include/math/: Bezier.h  Hermite.h  Transform.h
Lib/include/util/: Exceptions.h
Lib/source/anim/: Track.cpp
Lib/source/app/: GLApplication.cpp
Lib/source/gfx/: Attribute.cpp  Draw.cpp  IndexBuffer.cpp  Shader.cpp  Texture.cpp
Lib/source/math/: Transform.cpp
Lib/source/shader/: lit_frag.glsl  static_vertex.glsl
Test/: CMakeLists.txt
Test/source/app/: GLApplicationTest.cpp
Test/source/gfx/: ShaderTest.cpp
Test/source/math/: BezierTest.cpp  HermiteTest.cpp  TransformTest.cpp
